{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 16,
  "lineage": "7be97434-4ae5-4599-0f35-8ec5003dcd6d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-67bf3da4",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-67bf3da4",
            "association_id": "eipassoc-2f71a55b",
            "domain": "vpc",
            "id": "eipalloc-67bf3da4",
            "instance": "i-edfa3b20d2c4cd5fd",
            "network_interface": "eni-e81c530e",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-127-135-89-238.compute-1.amazonaws.com",
            "public_ip": "127.135.89.238",
            "tags": {
              "Name": "devops-sandbox-eip",
              "Project": "devops-sandbox"
            },
            "tags_all": {
              "Name": "devops-sandbox-eip",
              "Project": "devops-sandbox"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.main",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.vpc.aws_security_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1::instance/i-edfa3b20d2c4cd5fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-sandbox-ec2-profile",
            "id": "i-edfa3b20d2c4cd5fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-e81c530e",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-54-214-23-169.compute-1.amazonaws.com",
            "public_ip": "54.214.23.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-86145fa4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-137ae21a",
            "tags": {
              "Name": "devops-sandbox-ec2",
              "Project": "devops-sandbox",
              "Role": "web-server"
            },
            "tags_all": {
              "Name": "devops-sandbox-ec2",
              "Project": "devops-sandbox",
              "Role": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c75e6ab6d6af539f"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.vpc.aws_security_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-fefbd943",
            "id": "igw-fefbd943",
            "owner_id": "000000000000",
            "tags": {
              "Name": "devops-sandbox-igw",
              "Project": "devops-sandbox"
            },
            "tags_all": {
              "Name": "devops-sandbox-igw",
              "Project": "devops-sandbox"
            },
            "vpc_id": "vpc-b52c9999"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-6d54e247",
            "id": "rtb-6d54e247",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-fefbd943",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-sandbox-public-rt",
              "Project": "devops-sandbox"
            },
            "tags_all": {
              "Name": "devops-sandbox-public-rt",
              "Project": "devops-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-b52c9999"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-3dbdb47e",
            "route_table_id": "rtb-6d54e247",
            "subnet_id": "subnet-137ae21a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-0c75e6ab6d6af539f",
            "description": "Main security group for devops-sandbox",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c75e6ab6d6af539f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-sandbox-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-sandbox-sg",
              "Project": "devops-sandbox"
            },
            "tags_all": {
              "Name": "devops-sandbox-sg",
              "Project": "devops-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-b52c9999"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-137ae21a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-137ae21a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-sandbox-public-subnet",
              "Project": "devops-sandbox",
              "Type": "public"
            },
            "tags_all": {
              "Name": "devops-sandbox-public-subnet",
              "Project": "devops-sandbox",
              "Type": "public"
            },
            "vpc_id": "vpc-b52c9999"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-b52c9999",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-d84902c9",
            "default_route_table_id": "rtb-b05b975b",
            "default_security_group_id": "sg-747758e0287668dbb",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-b52c9999",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-b05b975b",
            "owner_id": "000000000000",
            "tags": {
              "Environment": "local",
              "Name": "devops-sandbox-vpc",
              "Project": "devops-sandbox"
            },
            "tags_all": {
              "Environment": "local",
              "Name": "devops-sandbox-vpc",
              "Project": "devops-sandbox"
            }
          }
        }
      ]
    }
  ]
}